add footer and font

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
       </nav>
       <button class="header_button">Кнопка</button>
     </header>
-    <div id="app"></div>
+    <footer>
+      asda
+      <hr />  
+      <p style="max-width: 286px;">Санкт-Петербург, Владимирский пр., д. 3 лит. А, офис 701</p>
+      <p>+ 7 (812) 445-68-09</p>
+      <a href="#">Напишите нам</a>
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
