--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Пан Партнер</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body id="root">
     <header>
       <img alt="Logo" src="./src/assets/logo.svg" />
       <nav class="navigate">
         <ul class="navigate_list">
-          <li class="drop_down_list">Пункт 1<img src="./src/assets/nav_arrow.svg" alt="arrow"> </li>
+          <li class="drop_down_list">
+            Пункт 1<img src="./src/assets/nav_arrow.svg" alt="arrow" />
+          </li>
           <li>Пункт 2</li>
           <li>Пункт 3</li>
           <li>Пункт 4</li>
@@ -20,13 +22,15 @@
       </nav>
       <button class="header_button">Кнопка</button>
     </header>
+    <main></main>
     <footer>
-      asda
-      <hr />  
-      <p style="max-width: 286px;">Санкт-Петербург, Владимирский пр., д. 3 лит. А, офис 701</p>
-      <p>+ 7 (812) 445-68-09</p>
+      <hr />
+      <p style="max-width: 286px">
+        Санкт-Петербург, Владимирский пр., д. 3 лит. А, офис 701
+      </p>
+      <a href="tel:+7(812)4456809">+7(812)445-68-09</a>
       <a href="#">Напишите нам</a>
     </footer>
-    <script type="module" src="/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
