--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Пан Партнер</title>
     <link rel="stylesheet" href="index.css" />
@@ -23,13 +23,14 @@
       <button class="header_button">Кнопка</button>
     </header>
     <main></main>
-    <footer>
-      <hr />
-      <p style="max-width: 286px">
+    <hr>
+    <footer class="footer">
+
+      <p class="footer_address">
         Санкт-Петербург, Владимирский пр., д. 3 лит. А, офис 701
       </p>
-      <a href="tel:+7(812)4456809">+7(812)445-68-09</a>
-      <a href="#">Напишите нам</a>
+      <a class="footer_tel" href="tel:+7(812)4456809"><pre>+ 7 (812) 445-68-09</pre></a>
+      <a class="footer_email" href="#">Напишите нам</a>
     </footer>
     <script src="./main.js"></script>
   </body>
