fix font family

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p class="footer_address">
         Санкт-Петербург, Владимирский пр., д. 3 лит. А, офис 701
       </p>
-      <a class="footer_tel" href="tel:+7(812)4456809"><pre>+ 7 (812) 445-68-09</pre></a>
+      <a class="footer_tel" href=""><pre>+ 7 (812) 445-68-09</pre></a>
       <a class="footer_email" href="#">Напишите нам</a>
     </footer>
     <script src="./main.js"></script>
